-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17
-
Component/s: hotspot
-
b20
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8274650 | 15.0.6 | Ekaterina Vergizova | P3 | Resolved | Fixed | b01 |
| JDK-8269109 | 11.0.13 | Hui Shi | P3 | Resolved | Fixed | b01 |
| JDK-8269430 | openjdk8u312 | Hui Shi | P3 | Resolved | Fixed | b03 |
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGFPE (0x8) at pc=0x00007f2f32a935a5, pid=30363, tid=30364
# Problematic frame:
# V [libjvm.so+0x8825a5] div_total_by_per_unit(unsigned long&, unsigned long&)+0xa5
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:StartFlightRecording -XX:FlightRecorderOptions:threadbuffersize=30M --add-modules=ALL-DEFAULT jdk.compiler/com.sun.tools.javac.launcher.Main Hello.java
Host: Intel(R) Xeon(R) Platinum 8255C CPU @ 2.50GHz, 96 cores, 250G, CentOS Linux release 7.2 (Final)
Time: Tue Apr 6 15:19:03 2021 CST elapsed time: 0.048142 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f2f2c020870): JavaThread "main" [_thread_in_vm, id=30364, stack(0x00007f2f3451a000,0x00007f2f3461b000)]
Stack: [0x00007f2f3451a000,0x00007f2f3461b000], sp=0x00007f2f34619970, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8825a5] div_total_by_per_unit(unsigned long&, unsigned long&)+0xa5
V [libjvm.so+0x882799] JfrMemorySizer::adjust_options(JfrMemoryOptions*)+0x139
V [libjvm.so+0x88b337] JfrOptionSet::adjust_memory_options() [clone .part.20]+0xa7
V [libjvm.so+0x88c3d5] JfrOptionSet::initialize(Thread*)+0x355
V [libjvm.so+0x89b2ab] JfrRecorder::on_create_vm_2()+0xab
V [libjvm.so+0x85aaa9] Jfr::on_create_vm_2()+0x9
V [libjvm.so+0xed30c4] Threads::create_vm(JavaVMInitArgs*, bool*)+0x724
V [libjvm.so+0x8df9e2] JNI_CreateJavaVM+0x52
C [libjli.so+0x4e61] JavaMain+0x91
C [libjli.so+0x8b39] ThreadJavaMain+0x9
- backported by
-
JDK-8269109 SIGFPE crash with option FlightRecorderOptions:threadbuffersize=30M
-
- Resolved
-
-
JDK-8269430 SIGFPE crash with option FlightRecorderOptions:threadbuffersize=30M
-
- Resolved
-
-
JDK-8274650 SIGFPE crash with option FlightRecorderOptions:threadbuffersize=30M
-
- Resolved
-
- duplicates
-
JDK-8241773 Using large globalbuffersize for JFR causes crash assert(free_size() == size)
-
- Closed
-
-
JDK-8241887 JFR: Crashes when global buffer size equals memory size
-
- Closed
-
- relates to
-
JDK-8266206 Build failure after JDK-8264752 with older GCCs
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/df587c75
-
Commit
openjdk/jdk15u-dev/4bbb64e4
-
Commit
openjdk/jdk/377b3461
-
Review
openjdk/jdk11u-dev/49
-
Review
openjdk/jdk11u-dev/50
-
Review
openjdk/jdk11u-dev/51
-
Review
openjdk/jdk11u-dev/52
-
Review
openjdk/jdk15u-dev/108
-
Review
openjdk/jdk/3355
-
Review
openjdk/jdk/3432