8264752: JFR crash when only specify threadbuffersize=30M